--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Nihanth Wagmi Cherukuru, PhD — Academic CV</title>
   <meta name="description" content="Nihanth Wagmi Cherukuru, PhD — Head of Visualization Services & Research • Project Scientist • UX & Data Visualization">
   <link rel="stylesheet" href="assets/css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <aside class="sidebar" role="complementary">
